@@ -1,5 +1,6 @@
 Version 4.22 - 23 April 2011, by Per Øyvind Karlsen
 
+- fix possible breakage when trying to load non-existant dependency flags
 - fix provide flags not being loaded for headers read from rpm files
 
 Version 4.21 - 23 April 2011, by Per Øyvind Karlsen
